--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,12 @@ html {
   margin: 0;
   padding: 0;
 }
+root {
+  padding: 0;
+  margin: 0;
+}
 
 :root {
-  margin: 0;
-  padding: 0;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
